# Robodog

./: .gitmodules  README.md
esp32/controller_imu/: platformio.ini
esp32/controller_imu/src/: main.cpp  quat_helper.cpp  quat_helper.hpp
esp32/the_dog/src/: main.cpp
ext/: hotspot.sh
ext/RoboViz/: .gitignore  CMakeLists.txt
ext/RoboViz/cmake/: FindAsio.cmake
ext/RoboViz/share/RoboViz/: cube_fs.glsl  cube_vs.glsl
ext/RoboViz/src/: CMakeLists.txt  main.cpp  orient.cpp  roboviz.cpp  sdl3_wrapper.cpp  sdl3_wrapper.hpp  thedog.cpp  thedog.hpp  util.cpp  util.hpp  utils.cpp  utils.hpp
stm32/: .gitignore
stm32/cube/: .cproject  .mxproject  .project  Robodog.ioc  cube.ioc
stm32/cube/Core/Inc/: main.h
stm32/cube/Core/Src/: main.c  stm32f4xx_hal_msp.c
stm32/platformio/: platformio.ini
stm32/platformio/include/: kinematics.h  kinematics.hpp  logging.h  main.h  motor.hpp  robot_main.h  robot_main.hpp  robot_main_c.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  util.hpp
stm32/platformio/include/dog/: leg.hpp  robot_main.hpp  robot_main_c.h  servo.hpp
stm32/platformio/include/stm/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
stm32/platformio/include/util/: extern_handles.h  logging.h  util.hpp
stm32/platformio/src/: kinematics.c  kinematics.cpp  logging.c  main.c  robot_main.c  robot_main.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c  sysmem.c  system_stm32f4xx.c
stm32/platformio/src/dog/: calibration.txt  leg.cpp  robot_main.cpp  servo.cpp
stm32/platformio/src/stm/: stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c  sysmem.c  system_stm32f4xx.c
stm32/platformio/src/util/: logging.c
